--- a/Views/Shared/_LayoutBarraMenu.cshtml
+++ b/Views/Shared/_LayoutBarraMenu.cshtml
@@ -30,7 +30,7 @@
                     <li>
                         <a href="#">Estados</a>
                         <ul>
-                            <li><a href="#">de Estudiante</a></li>
+                            <li><a href="~/EstadoEstudiante/Index">de Estudiante</a></li>
                             <li><a href="~/EstadoProfesor/Index">de Profesor</a></li>
                             <li><a href="~/EstadoAuxiliar/Index">de Auxiliar</a></li>
                         </ul>
@@ -52,12 +52,13 @@
                 </ul>
             </li>
             <li>
-                <a href="#">Usuarios</a>
+                <a href="#">Gestion de Usuarios</a>
                 <ul>
                     <li><a href="#">Profesores</a></li>
                     <li><a href="#">Auxiliares</a></li>
                 </ul>
             </li>
+            <li><a href="#">Gestion de Estudiantes(PROFESOR)</a></li>
             <li><a href="#">Ayuda</a></li>
             <li><a href="#">Cerrar Sesion</a></li>
         </ul>
